--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,14 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/dot.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/chats.css";
+@import "screens/find.css";
+@import "screens/more.css";
 
 body {
     color: #30363E;
