--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,7 +4,14 @@
     align-items: center;
     padding: 0px var(--horizontal-space);
     padding-top: 50px;
-    margin-bottom: 35px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    background-color: white;
+    top: 0;
+    position: sticky;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
 }
 
 .screen-header__title {
@@ -14,4 +21,17 @@
 
 .screen-header__icons span {
     margin-left: 25px;
+}
+
+@keyframes rotateGear {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateGear 2s linear infinite;
 }
