--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,10 @@
     justify-content: center;
     padding: 5px 3px;
     box-sizing: border-box;
+    background-color: white;
+    top: 0;
+    width: 100%;
+    z-index: 2;
 }
 
 .status-bar__column {
@@ -18,6 +22,7 @@
 .status-bar__column:nth-child(2) {
     display: flex;
     justify-content: center;
+    font-weight: 600;
 }
 
 .status-bar__column:last-child {
