--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -63,6 +63,30 @@ id가 아닌 class 즉, BEM 방식으로 작성했다면!
     font-size: 13px;
 }
 
+@keyframes hideSplashScreen {
+  from {
+      opacity: 1;
+  }
+  to {
+      opacity: 0;
+      visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 130px;
+  animation: hideSplashScreen 0.4s ease-in-out forwards;
+  animation-delay: 1s;
+}
+
 /*
 id가 아닌 class 즉, BEM 방식으로 작성했을 경우!
 .login-form {
