--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/dot.css";
+@import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -17,6 +19,8 @@
 @import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat-screen.css";
 
 body {
     color: #30363E;
