--- a/css/screens/chat-screen.css
+++ b/css/screens/chat-screen.css
@@ -1,6 +1,6 @@
 #chat-screen {
     background-color: #ACC1D1;
-    height: 500vh;
+    height: 110vh;
 }
 #chat-screen .status-bar,
 #chat-screen .alt-header {
@@ -71,6 +71,7 @@
 .message__info {
     display: flex;
     align-items: flex-end;
+    margin-bottom: 10px;
 }
 
 .message__bubble {
@@ -79,7 +80,7 @@
     border-radius: 15px;
     border-top-left-radius: 0px;
     margin-right: 10px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .message__time {
@@ -160,7 +161,7 @@
 .reply__column:last-child button {
     right: 15px;
     top: 9px;
-    background-color: #3282F6;
+    background-color: rgb(0, 0, 0, 0.2);
     border: none;
     width: 24px;
     height: 24px;
