--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -74,7 +74,7 @@ id가 아닌 class 즉, BEM 방식으로 작성했다면!
 }
 
 #splash-screen {
-  background-color: var(--yellow);
+  background-color: #4AADF0;
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -85,6 +85,11 @@ id가 아닌 class 즉, BEM 방식으로 작성했다면!
   font-size: 130px;
   animation: hideSplashScreen 0.4s ease-in-out forwards;
   animation-delay: 1s;
+}
+
+.splash-screen img {
+  width: 30px;
+  height: 30px;
 }
 
 /*
