--- a/css/screens/settings.css
+++ b/css/screens/settings.css
@@ -1,3 +1,21 @@
+#settings-screen {
+    height: 110vh;
+    background-color: #F2F2F5;
+}
+
+#settings-screen .alt-header {
+    top: 0;
+    position: sticky;
+    width: 100%;
+    padding-bottom: 20px;
+    background-color: white;
+    box-sizing: border-box;
+}
+
+.settings-display {
+    background-color: white;
+}
+
 .settings__setting {
     padding: 20px 0px;
     border-bottom: 1px solid rgb(0, 0, 0, 0.1);
@@ -5,6 +23,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 20px;
+}
+
+.sub-list .settings__setting:last-child {
+    border-bottom: none;
 }
 
 /*
@@ -43,3 +66,18 @@
     font-size: 12px;
 }
 */
+
+.logout {
+    margin: 20px 0px;
+    padding: 0px 30px;
+}
+
+.logout-btn {
+    display: flex;
+    justify-content: center;
+    background-color: var(--yellow);
+    padding: 20px 0px;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 600;
+}
