--- a/css/screens/chats.css
+++ b/css/screens/chats.css
@@ -7,7 +7,7 @@
 .user-component__column > button {
     width: 60px;
     height: 30px;
-    background-color: #3282F6;
+    background-color: #1097E4;
     border: none;
     border-radius: 10px;
     color: white;
