--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --yellow: #FAE003;
+    --blue: #4AADF0;
     --horizontal-space: 20px;
     --main-border: 1px solid rgb(0, 0, 0, 0.2);
 }
