--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -57,6 +57,10 @@
     animation: appearBtnAnimation 0.3s ease-in-out forwards;
 }
 
+.nav__btn:hover {
+    color: var(--blue);
+}
+
 .nav__btn:nth-child(2) {
     animation-delay: 0.2s;
 }
