--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,5 +1,5 @@
 #find-screen {
-    height: 120vh;
+    height: 110vh;
 }
 
 .screen-header__icons {
@@ -30,7 +30,7 @@
 }
 
 .find-icons span {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .open-chat {
@@ -139,7 +139,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 0px;
+    padding-top: 10px;
+    padding-bottom: 20px;
     border-bottom: var(--main-border);
 }
 
@@ -151,13 +152,34 @@
 .user-shopping__list img {
     width: 20px;
     height: 20px;
-    border-radius: 8px;
+    border-radius: 10px;
     margin-right: 5px;
+    background-color: #F9BD3E;
+    padding: 2px;
+}
+
+.user-shopping__list span {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.user-shopping__list i {
+    margin-left: 5px;
 }
 
 .user-shopping__text {
     display: flex;
     align-items: center;
+}
+
+.user-shopping__text span {
+    font-weight: 600;
+    font-size: 13px;
+    opacity: 0.8;
+}
+
+.user-shopping__text span:hover {
+    color: var(--blue);
 }
 
 .user-shopping__text .divider {
@@ -168,11 +190,13 @@
 }
 
 .best-category {
-    margin-top: 30px;
+    margin-top: 20px;
+    font-family: 'Secular One', sans-serif;
 }
 
-.best-category__text {
-    margin-bottom: 10px;
+.best-category__title {
+    font-weight: 600;
+    opacity: 0.8;
 }
 
 .best-category__list {
@@ -187,6 +211,10 @@
     flex-direction: column;
 }
 
+.best-category__list--name:hover {
+    filter: brightness(70%);
+}
+
 .best-category__list--name img {
     width: 180px;
     height: 180px;
@@ -194,12 +222,12 @@
 }
 
 .best-category__list--name span {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 600;
     color: white;
     position: relative;
-    top: 40px;
-    left: 10px;
+    top: 45px;
+    left: 15px;
 }
 
 
