--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,15 +1,15 @@
 #friends-screen {
-    height: 120vh;
+    height: 125vh;
 }
 
 #friends-display-link {
     text-align: center;
     display: block;
     padding: 15px 0px;
-    margin-bottom: 10px;
-    background-color: #FAFAFA;
+    margin-bottom: 5px;
+    background-color: #F0F3F5;
     font-size: 16px;
-    margin-top: -15px;
+    margin-top: -5px;
 }
 
 #friends-display-link i {
@@ -29,7 +29,7 @@
 }
 
 .friends-screen__channel {
-    margin-top: 25px;
+    margin-top: 15px;
     border-top: var(--main-border);
     padding-top: 15px;
 }
@@ -38,13 +38,19 @@
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
-    color: rgb(0,0,0,0.5);
+    opacity: 0.8;
+    font-weight: 600;
+}
+
+.freinds-screen__channel-header span {
+    font-family: 'Secular One', sans-serif;
 }
 
 .user-component__recommended-channel {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 
 .recommended-channel__column {
@@ -59,15 +65,24 @@
     text-align: center;
 }
 
+.recommended-channel__column:hover {
+    box-shadow: 3px 3px 5px rgb(0,0,0,0.3);
+    border-radius: 10px;
+    transform: scale(1.02);
+}
+
 .recommended-channel__column img {
     width: 40px;
     height: 40px;
     border-radius: 10px;
-    margin: 10px 0px;
+    margin: 5px 0px;
+    padding: 5px;
+    background-color: #B0BBBF
 }
 
 .recommended-channel__column--title {
     font-weight: 600;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
@@ -75,7 +90,7 @@
     font-size: 10px;
     opacity: 0.8;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .recommended-channel__column button {
@@ -85,7 +100,15 @@
     border: none;
     background-color: rgb(0,0,0,0.2);
     border-radius: 8px;
+    font-weight: 600;
+    color: rgb(0,0,0,0.6);
 }
+
+.recommended-channel__column button:hover {
+    background-color: rgb(0,0,0,0.6);
+    color: white;
+}
+
 
 
 
