--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,26 +1,30 @@
 .welcome-header {
-    padding: 90px 0px;
+    padding-top: 90px;
+    margin-bottom: 30px;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.welcome-header__title {
-    margin-bottom: 40px;
-    font-size: 25px;
+.welcome-header img {
+  width: 340px;
+  height: 200px;
 }
 
-.welcome-header__text {
-    width: 60%;
-    opacity: 0.7;
-    line-height: 20px;
+.welcome-header__title {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 35px;
+    font-family: 'Shadows Into Light', cursive;
 }
+
 
 #login-form {
     display: flex;
     flex-direction: column;
     margin: 0px 30px;
+    font-family: 'Shadows Into Light', cursive;
 }
 
 #login-form input {
@@ -28,6 +32,10 @@
     padding: 15px 0px;
     font-size: 18px;
     margin-bottom: 25px;
+}
+
+.login-form__link {
+  color: var(--blue);
 }
 
 #login-form input::placeholder{
@@ -40,7 +48,7 @@
 }
 
 #login-form input:focus {
-    border-color: var(--yellow);
+    border-color: var(--blue);
 }
 
 /*
@@ -50,7 +58,7 @@ id가 아닌 class 즉, BEM 방식으로 작성했다면!
 .login-form__a
 */
 #login-form input[type="submit"] {
-    background-color: var(--yellow);
+    background-color: var(--blue);
     cursor: pointer;
     padding: 20px 0px;
     border-radius: 5px;
@@ -74,7 +82,7 @@ id가 아닌 class 즉, BEM 방식으로 작성했다면!
 }
 
 #splash-screen {
-  background-color: #4AADF0;
+  background-color: var(--blue);
   position: absolute;
   height: 100vh;
   width: 100vw;
