--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
 @import "reset.css";
 @import "variables.css";
@@ -12,6 +14,7 @@
 @import "components/dot.css";
 @import "components/alt-screen-header.css";
 @import "components/no-mobile.css";
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 /* Screens */
 @import "screens/login.css";
