--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,6 +1,3 @@
-#friends-screen {
-    height: 128vh;
-}
 
 #friends-display-link {
     text-align: center;
@@ -26,6 +23,7 @@
 
 .friends-screen {
     padding: 0px var(--horizontal-space);
+    margin-bottom: 73px;
 }
 
 .friends-screen__channel {
