--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 @import "reset.css";
 @import "variables.css";
+
 
 /* Components */
 @import "components/status-bar.css";
@@ -14,7 +16,6 @@
 @import "components/dot.css";
 @import "components/alt-screen-header.css";
 @import "components/no-mobile.css";
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 /* Screens */
 @import "screens/login.css";
@@ -35,6 +36,7 @@ body {
 
 .main-screen {
     padding: 0px var(--horizontal-space);
+    margin-bottom: 73px;
 }
 
 
